// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabButton renders a TabButton 1`] = `
<div>
  <button
    class="sc-AxirZ imOGRl 
    tab-button
    
  "
    type="button"
  >
    <div
      class="sc-AxjAm fXBrIo"
    >
      <div
        class="MuiTypography-root MuiTypography-body1 MuiTypography-colorInherit"
      >
        Refine Results
      </div>
    </div>
  </button>
</div>
`;

exports[`TabButton renders multiple TabButtons 1`] = `
<div>
  <button
    class="sc-AxirZ imOGRl 
    tab-button
    
  "
    type="button"
  >
    <div
      class="sc-AxjAm fXBrIo"
    >
      <div
        class="MuiTypography-root MuiTypography-body1 MuiTypography-colorInherit"
      >
        Refine Results1
      </div>
    </div>
  </button>
  <button
    class="sc-AxirZ imOGRl 
    tab-button
    
  "
    type="button"
  >
    <div
      class="sc-AxjAm fXBrIo"
    >
      <div
        class="MuiTypography-root MuiTypography-body1 MuiTypography-colorInherit"
      >
        Refine Results2
      </div>
    </div>
  </button>
</div>
`;

exports[`TabPanel renders a TabPanel 1`] = `
<div>
  <div
    class="sc-AxhUy cbAQDN 
    tab-panel
    
  "
    name="tab-panel-test"
  >
    <p>
      View Type
    </p>
  </div>
</div>
`;

exports[`TabPanel renders additional classNames 1`] = `
<div>
  <div
    class="sc-AxhUy cbAQDN 
    tab-panel
    test classes
  "
    name="tab-panel-test1"
  >
    <p>
      test1
    </p>
  </div>
  <div
    class="sc-AxhUy cbAQDN 
    tab-panel
    another-class
  "
    name="tab-panel-test2"
  >
    <p>
      test2
    </p>
  </div>
</div>
`;

exports[`TabPanel renders multiple TabPanels 1`] = `
<div>
  <div
    class="sc-AxhUy cbAQDN 
    tab-panel
    
  "
    name="tab-panel-test1"
  >
    <p>
      test1
    </p>
  </div>
  <div
    class="sc-AxhUy cbAQDN 
    tab-panel
    
  "
    name="tab-panel-test2"
  >
    <p>
      test2
    </p>
  </div>
  <div
    class="sc-AxhUy cbAQDN 
    tab-panel
    
  "
    name="tab-panel-test3"
  >
    <p>
      test3
    </p>
  </div>
  <div
    class="sc-AxhUy cbAQDN 
    tab-panel
    
  "
    name="tab-panel-test4"
  >
    <p>
      test4
    </p>
  </div>
</div>
`;

exports[`Tabs renders a border 1`] = `
<div>
  <div
    class="sc-AxiKw fHkgoG 
    tabs-container
    
  "
    style="min-height: initial;"
  >
    <div
      class="sc-AxhCb lsWBe tab-button-wrap"
    >
      <button
        class="sc-AxirZ bnYwsb 
    tab-button
    active
  "
        type="button"
      >
        <div
          class="sc-AxjAm hTEWcS"
        >
          <div
            class="MuiTypography-root MuiTypography-body1 MuiTypography-colorInherit"
          >
            Refine Results
          </div>
        </div>
      </button>
      <button
        class="sc-AxirZ imOGRl 
    tab-button
    
  "
        type="button"
      >
        <div
          class="sc-AxjAm fXBrIo"
        >
          <div
            class="MuiTypography-root MuiTypography-body1 MuiTypography-colorInherit"
          >
            Edit Details
          </div>
        </div>
      </button>
    </div>
    <div
      class="sc-AxhUy bzUzgY 
    tab-panel
    
  "
      name="refine-results-1"
    >
      <p>
        View Type
      </p>
    </div>
    <div
      class="sc-AxhUy cbAQDN 
    tab-panel
    
  "
      name="edit-details-1"
    >
      <p>
        Tab two content
      </p>
      <p>
        stuff
      </p>
    </div>
  </div>
</div>
`;

exports[`Tabs renders additional classNames 1`] = `
<div>
  <div
    class="sc-AxiKw iohaWN 
    tabs-container
    test classes
  "
    style="min-height: initial;"
  >
    <div
      class="sc-AxhCb lsWBe tab-button-wrap"
    >
      <button
        class="sc-AxirZ bnYwsb 
    tab-button
    active
  "
        type="button"
      >
        <div
          class="sc-AxjAm hTEWcS"
        >
          <div
            class="MuiTypography-root MuiTypography-body1 MuiTypography-colorInherit"
          >
            Refine Results
          </div>
        </div>
      </button>
      <button
        class="sc-AxirZ imOGRl 
    tab-button
    
  "
        type="button"
      >
        <div
          class="sc-AxjAm fXBrIo"
        >
          <div
            class="MuiTypography-root MuiTypography-body1 MuiTypography-colorInherit"
          >
            Edit Details
          </div>
        </div>
      </button>
    </div>
    <div
      class="sc-AxhUy bzUzgY 
    tab-panel
    
  "
      name="refine-results-1"
    >
      <p>
        View Type
      </p>
    </div>
    <div
      class="sc-AxhUy cbAQDN 
    tab-panel
    
  "
      name="edit-details-1"
    >
      <p>
        Tab two content
      </p>
      <p>
        stuff
      </p>
    </div>
  </div>
</div>
`;

exports[`Tabs renders correctly with minimal props 1`] = `
<div>
  <div
    class="sc-AxiKw iohaWN 
    tabs-container
    
  "
    style="min-height: initial;"
  >
    <div
      class="sc-AxhCb lsWBe tab-button-wrap"
    >
      <button
        class="sc-AxirZ bnYwsb 
    tab-button
    active
  "
        type="button"
      >
        <div
          class="sc-AxjAm hTEWcS"
        >
          <div
            class="MuiTypography-root MuiTypography-body1 MuiTypography-colorInherit"
          >
            Refine Results
          </div>
        </div>
      </button>
      <button
        class="sc-AxirZ imOGRl 
    tab-button
    
  "
        type="button"
      >
        <div
          class="sc-AxjAm fXBrIo"
        >
          <div
            class="MuiTypography-root MuiTypography-body1 MuiTypography-colorInherit"
          >
            Edit Details
          </div>
        </div>
      </button>
    </div>
    <div
      class="sc-AxhUy bzUzgY 
    tab-panel
    
  "
      name="refine-results-1"
    >
      <p>
        View Type
      </p>
    </div>
    <div
      class="sc-AxhUy cbAQDN 
    tab-panel
    
  "
      name="edit-details-1"
    >
      <p>
        Tab two content
      </p>
      <p>
        stuff
      </p>
    </div>
  </div>
</div>
`;
